DS_Final/GameLang/GameScriptParser.py
# Generated from GameScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GameScriptParser ( Parser ):

    grammarFileName = "GameScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'move'", "';'", "'jump'", "'attack'", 
                     "'wait'", "'seconds'", "'left'", "'right'", "'up'", 
                     "'down'", "'enemy'", "'boss'", "'object'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "NEWLINE", "WS" ]

    RULE_script = 0
    RULE_command = 1
    RULE_moveCommand = 2
    RULE_jumpCommand = 3
    RULE_attackCommand = 4
    RULE_waitCommand = 5
    RULE_direction = 6
    RULE_target = 7
    RULE_amount = 8

    ruleNames =  [ "script", "command", "moveCommand", "jumpCommand", "attackCommand", 
                   "waitCommand", "direction", "target", "amount" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    INT=14
    NEWLINE=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GameScriptParser.EOF, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GameScriptParser.CommandContext)
            else:
                return self.getTypedRuleContext(GameScriptParser.CommandContext,i)


        def getRuleIndex(self):
            return GameScriptParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = GameScriptParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.command()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 58) != 0)):
                    break

            self.state = 23
            self.match(GameScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moveCommand(self):
            return self.getTypedRuleContext(GameScriptParser.MoveCommandContext,0)


        def jumpCommand(self):
            return self.getTypedRuleContext(GameScriptParser.JumpCommandContext,0)


        def attackCommand(self):
            return self.getTypedRuleContext(GameScriptParser.AttackCommandContext,0)


        def waitCommand(self):
            return self.getTypedRuleContext(GameScriptParser.WaitCommandContext,0)


        def getRuleIndex(self):
            return GameScriptParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = GameScriptParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.moveCommand()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.jumpCommand()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.attackCommand()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.waitCommand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(GameScriptParser.DirectionContext,0)


        def amount(self):
            return self.getTypedRuleContext(GameScriptParser.AmountContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(GameScriptParser.NEWLINE)
            else:
                return self.getToken(GameScriptParser.NEWLINE, i)

        def getRuleIndex(self):
            return GameScriptParser.RULE_moveCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoveCommand" ):
                listener.enterMoveCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoveCommand" ):
                listener.exitMoveCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoveCommand" ):
                return visitor.visitMoveCommand(self)
            else:
                return visitor.visitChildren(self)




    def moveCommand(self):

        localctx = GameScriptParser.MoveCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moveCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(GameScriptParser.T__0)
            self.state = 32
            self.direction()
            self.state = 33
            self.amount()
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                _la = self._input.LA(1)
                if not(_la==2 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JumpCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(GameScriptParser.NEWLINE)
            else:
                return self.getToken(GameScriptParser.NEWLINE, i)

        def getRuleIndex(self):
            return GameScriptParser.RULE_jumpCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJumpCommand" ):
                listener.enterJumpCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJumpCommand" ):
                listener.exitJumpCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJumpCommand" ):
                return visitor.visitJumpCommand(self)
            else:
                return visitor.visitChildren(self)




    def jumpCommand(self):

        localctx = GameScriptParser.JumpCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_jumpCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(GameScriptParser.T__2)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                _la = self._input.LA(1)
                if not(_la==2 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttackCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def target(self):
            return self.getTypedRuleContext(GameScriptParser.TargetContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(GameScriptParser.NEWLINE)
            else:
                return self.getToken(GameScriptParser.NEWLINE, i)

        def getRuleIndex(self):
            return GameScriptParser.RULE_attackCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttackCommand" ):
                listener.enterAttackCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttackCommand" ):
                listener.exitAttackCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttackCommand" ):
                return visitor.visitAttackCommand(self)
            else:
                return visitor.visitChildren(self)




    def attackCommand(self):

        localctx = GameScriptParser.AttackCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attackCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(GameScriptParser.T__3)
            self.state = 46
            self.target()
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                _la = self._input.LA(1)
                if not(_la==2 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WaitCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def amount(self):
            return self.getTypedRuleContext(GameScriptParser.AmountContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(GameScriptParser.NEWLINE)
            else:
                return self.getToken(GameScriptParser.NEWLINE, i)

        def getRuleIndex(self):
            return GameScriptParser.RULE_waitCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWaitCommand" ):
                listener.enterWaitCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWaitCommand" ):
                listener.exitWaitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWaitCommand" ):
                return visitor.visitWaitCommand(self)
            else:
                return visitor.visitChildren(self)




    def waitCommand(self):

        localctx = GameScriptParser.WaitCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_waitCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(GameScriptParser.T__4)
            self.state = 53
            self.amount()
            self.state = 54
            self.match(GameScriptParser.T__5)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==2 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GameScriptParser.RULE_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirection" ):
                listener.enterDirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirection" ):
                listener.exitDirection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirection" ):
                return visitor.visitDirection(self)
            else:
                return visitor.visitChildren(self)




    def direction(self):

        localctx = GameScriptParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GameScriptParser.RULE_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget" ):
                listener.enterTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget" ):
                listener.exitTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarget" ):
                return visitor.visitTarget(self)
            else:
                return visitor.visitChildren(self)




    def target(self):

        localctx = GameScriptParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_target)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14336) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AmountContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GameScriptParser.INT, 0)

        def getRuleIndex(self):
            return GameScriptParser.RULE_amount

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmount" ):
                listener.enterAmount(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmount" ):
                listener.exitAmount(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAmount" ):
                return visitor.visitAmount(self)
            else:
                return visitor.visitChildren(self)




    def amount(self):

        localctx = GameScriptParser.AmountContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_amount)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(GameScriptParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





